2014-03-17  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/snmpconsole/snmp_view.php: Added 'group by
	OID/IP' to SNMP traps.	

2014-03-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  pandoradb.sql
	  pandoradb_data.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	  extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	  godmode/reporting/graph_builder.graph_editor.php
	  godmode/setup/setup_visuals.php
	  include/functions_config.php
	  include/functions_graph.php: Changed weight and colors in
	combine graphs.

2014-03-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	include/ajax/visual_console_builder.ajax.php: Fix wrong
	alerts status in warning without alerts elements. Fix alerts 
	status broken by miguel in previous commits to fix ajax load,

2014-03-13  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: Improved version detection. Some distros
	  append alphanumeric character to the version number.

	* include/functions_reporting.php: Fixed SLA bars. Unknown intervals were
	  not properly computed.

2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the link of other visual
	map when it is in a public visual console.
	
	Incident: #658

2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/shortcut_bar.php, include/functions_ui.php: fixed the
	PHP warnings.

2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.main.php,
	godmode/reporting/reporting_builder.php,
	include/functions_users.php: fixed the access to the report with the
	user profile "RW" and "RM".
	
	Incident: #655

2014-03-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/menu.php
	  godmode/groups/configure_modu_group.php
	  godmode/groups/modu_group_list.php: Moved 'Module groups'
	to 'Manage modules'.
